--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
+    "fuse.js": "^7.0.0",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
